--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ogxtrwB0MFcu9HW2CYb+/A2kJqFucIHChBSzBZjplOI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://blog.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=blog
+DB_DATABASE=signup
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=suman.krgr8@gmail.com
+MAIL_PASSWORD=original gmail password
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=suman.krgr8@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
